# intro-estatistica-llms

./: .gitignore  1-jc-remove-missing.ipynb  README.md  dados_poscomp.csv  pyproject.toml
activity 10/: word_embeddings_2d_4d.ipynb
activity 4/: activity1.ipynb  activity2.ipynb  activity3.ipynb
activity 4/.ipynb_checkpoints/: activity1-checkpoint.ipynb  activity2-checkpoint.ipynb
activity 5/: cross_entropy_softmax.ipynb
activity 6/: Atividade B.ipynb  Atividade C.ipynb  atividade A.ipynb
activity 7/: entendimento_codigo.ipynb  metricas_rede_neural.ipynb
activity 8/: conversao_calculos.ipynb  solucao_pytorch.ipynb  solução com pytorch.ipynb
activity 9/: Parte A - backpropagation_manual_com_pytorch.ipynb  Parte B - ReLU em ação - Alternativa.ipynb  Parte B - ReLU em ação.ipynb  Parte C - Gradient Descent e aprendizado de padrões.ipynb
