[project]
name = "llms-disciplina"
version = "0.1.0"
description = "Este projeto é para práticas de programação na disciplina de LLMs e aprender a usar ferramentas."
authors = [
    {name = "Jean Carlos",email = "jeancc.costa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "jupyterlab (>=4.3.4,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
